# logspot

./: CMakeLists.txt
include/: Logger.h
include/logspot/: Log.h  Logger.h
source/: Logger.cpp
src/: Log.cpp
test/: Tests.cmake  lst-test.cpp
